# cookiecutter-drf

./: .gitignore  README.md  cookiecutter.json
.github/workflows/: cicd.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project.slug}}/backend/: .gitignore  docker-compose.yml  pyproject.toml
{{cookiecutter.project.slug}}/backend/src/{{cookiecutter.project_slug}}/: urls.py
{{cookiecutter.project.slug}}/backend/tests/models/: test_users.py
{{cookiecutter.project.slug}}/doc/source/: index.md
{{cookiecutter.project_slug}}/backend/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-flower-only.yml  docker-compose-nginx-only.yml  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/backend/nginx/: default.conf
{{cookiecutter.project_slug}}/backend/src/{{cookiecutter.project_slug}}/: celery.py  config.py  tasks.py  urls.py
{{cookiecutter.project_slug}}/backend/src/{{cookiecutter.project_slug}}/management/commands/: initadmin.py
{{cookiecutter.project_slug}}/backend/src/{{cookiecutter.project_slug}}/settings/: base.py  develop.py  production.py
{{cookiecutter.project_slug}}/backend/src/{{cookiecutter.project_slug}}/users/: admin.py  models.py  permissions.py  serializers.py  views.py
{{cookiecutter.project_slug}}/backend/src/{{cookiecutter.project_slug}}/users/migrations/: 0001_initial.py  0002_alter_user_id.py
{{cookiecutter.project_slug}}/backend/tests/: fixtures.py
{{cookiecutter.project_slug}}/backend/tests/api/: test_tokens.py  test_urls.py
{{cookiecutter.project_slug}}/backend/tests/commands/: test_commands.py
{{cookiecutter.project_slug}}/backend/tests/factories/: users.py
{{cookiecutter.project_slug}}/backend/tests/users/: test_users.py
{{cookiecutter.project_slug}}/backend/tests/web/: test_web.py
{{cookiecutter.project_slug}}/doc/source/: conf.py
